# rofi-linear

./: CLAUDE.md  Cargo.toml  Cross.toml  Makefile  PKGBUILD  README.md
.github/scripts/: collect-changes.sh  generate-pr-body.sh
.github/workflows/: aur.yml  auto-pr.yml  ci.yml  release.yml
src/: config.rs  linear.rs  main.rs  rofi.rs
src/commands/: auth.rs  link.rs  list.rs  mod.rs  run.rs  unlink.rs
