[package]
name = "rofi-linear"
version = "0.1.0"
edition = "2021"
description = "Rofi plugin for creating Linear issues"
authors = ["mathix"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
anyhow = "1"
open = "5"
